# RUGDLIO

./: .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.py
checkpoints/: bimodal_NCL_Pretrained_Match.pth  bimodal_NCL_Pretrained_Match_best.pth
config/: bimodal_NCL_Pretrained_Match.yaml
keypoint_node/: batch_runner.py  dfliom_rosbag.py  dfliom_single_pcd.py  keypoint_node.py  run_featureliom_on_rosbag.py
keypoint_node/other/: dfliom_rosbag_backup.py
model/: bimodal_compressor.py  handcrafted_feature_extractor.py  kpconv.py  utils.py
scripts/: convert_rosbag_to_dfliomRosbag.sh  extract_rosbag2scans_to_pcds.py  process_rosbag_to_dfliom.sh  run_featureliom_batch.sh  start_featureliom.sh  test_dfliom_single_pcd.py
submodules/octree_handler/: CMakeLists.txt  setup.py
submodules/octree_handler/src/: OctreeHandler.cpp  OctreeHandler.h
