<?xml version="1.0"?>
<package format="3">
    <name>FeatureLIOM</name>
    <version>0.0.1</version>
    <description>Dense Learned Compression for SLAM</description>
    <maintainer email="dong.zih@northeastern.edu">Zihao Dong</maintainer>
    <license>MIT</license>

    <!-- ROS2 dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>sensor_msgs_py</depend>

    <!-- Add any additional ROS2 dependencies here -->

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>